--- a/Public/Home/default/Index_index.html
+++ b/Public/Home/default/Index_index.html
@@ -49,7 +49,7 @@
 		        <button type="submit" class="btn btn-default">Submit</button>
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="/imooc.php/Index/index">TPCMS</a></li>
+		        <li><a href="/Manage/Index/index">TPCMS</a></li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{$Think.session.adm_username} <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
